tests/snapshots/main__util__cargo_mutants_in_relative_dependency_tree_passes.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 6 mutants to test
ok       Unmutated baseline
6 mutants tested: 6 caught

