tests/snapshots/main__util__check_tree_with_mutants_skip.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 5 mutants to test
ok       Unmutated baseline
ok       src/lib.rs:15:5: replace controlled_loop with ()
ok       src/lib.rs:21:28: replace > with == in controlled_loop
ok       src/lib.rs:21:28: replace > with < in controlled_loop
ok       src/lib.rs:21:53: replace * with + in controlled_loop
ok       src/lib.rs:21:53: replace * with / in controlled_loop
5 mutants tested: 5 succeeded

