tests/snapshots/main__util__factorial_mutants_no_copy_target.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 5 mutants to test
ok       Unmutated baseline
MISSED   src/bin/factorial.rs:2:5: replace main with ()
5 mutants tested: 1 missed, 4 caught

