tests/snapshots/main__util__mutants_are_unapplied_after_testing_so_later_missed_mutants_are_found.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 6 mutants to test
ok       Unmutated baseline
MISSED   src/b.rs:2:5: replace one_untested -> i32 with 0
MISSED   src/b.rs:2:5: replace one_untested -> i32 with -1
6 mutants tested: 2 missed, 4 caught

