tests/snapshots/main__util__small_well_tested_mutants_with_cargo_arg_release.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 4 mutants to test
ok       Unmutated baseline
4 mutants tested: 4 caught

